--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "nodemailer": "^5.1.1"
+  },
+  "script": {
+    "start": "node app.js"
   }
+
 }
