--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Confirmação de Presença de membros por email",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "advs",
   "license": "MIT",
@@ -13,9 +14,6 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "nodemailer": "^5.1.1"
-  },
-  "script": {
-    "start": "node app.js"
   }
 
 }
